# model-runner

./: .gitignore  .gitmodules  .golangci.yml  Dockerfile  Makefile  README.md  RESUMABLE_DOWNLOADS.md  backends_vllm.go  backends_vllm_stub.go  docker-compose.gpu.yml  docker-compose.yml  go.mod  go.sum  go.work  go.work.sum  main.go  main_integration_test.go  main_test.go  vllm_backend.go  vllm_backend_stub.go
.github/agents/: model-card-generator.yaml
.github/workflows/: ci.yml  cli-build.yml  cli-validate.yml  dmr-daily-check.yml  generate-model-card.yml  integration-test.yml  promote-to-latest.yml  release.yml
charts/docker-model-runner/: Chart.yaml  Makefile  README.md  values.yaml
charts/docker-model-runner/static/: docker-model-runner-smollm2.yaml
charts/docker-model-runner/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
cmd/cli/: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
cmd/cli/commands/: backend.go  backend_test.go  bench.go  bench_test.go  code.go  code_test.go  compose.go  compose_test.go  configure.go  configure_flags.go  configure_show.go  configure_test.go  df.go  images.go  inspect.go  install-runner.go  install-runner_test.go  integration_test.go  k8s.go  k8s_test.go  launch.go  launch_test.go  list.go  list_test.go  logs.go  nim.go  ollama_test.go  package.go  ps.go  pull.go  push.go  reinstall-runner.go  reinstall-runner_test.go  requests.go  restart-runner.go  rm.go  root.go  run.go  run_test.go  search.go  (+12 more)
cmd/cli/desktop/: api.go  context.go  context_test.go  desktop.go  desktop_test.go  progress.go  progress_test.go
cmd/cli/readline/: buffer.go  editor.go  editor_test.go  editor_windows.go  history.go  readline.go  term.go  term_bsd.go  term_linux.go  term_windows.go
cmd/cli/search/: client.go  dockerhub.go  http_client.go  huggingface.go  types.go
cmd/dmrlet/: go.mod  go.sum  main.go
cmd/dmrlet/commands/: list.go  pull.go  root.go  serve.go  stop.go  version.go
cmd/mdltool/: main.go
demos/embeddings/: package-lock.json  package.json
demos/nim/: README.md
dmrlet/: Cargo.toml
dmrlet/crates/dmrlet-api/: Cargo.toml
dmrlet/crates/dmrlet-api/src/: lib.rs  rest.rs
dmrlet/crates/dmrlet-cli/: Cargo.toml
dmrlet/crates/dmrlet-cli/src/: main.rs
dmrlet/crates/dmrlet-cli/src/commands/: mod.rs
dmrlet/crates/dmrlet-core/: Cargo.toml
dmrlet/crates/dmrlet-core/src/: config.rs  error.rs  gpu.rs  lib.rs  model.rs
dmrlet/crates/dmrlet-daemon/: Cargo.toml
dmrlet/crates/dmrlet-daemon/src/: main.rs
dmrlet/crates/dmrlet-network/: Cargo.toml
dmrlet/crates/dmrlet-network/src/: balancer.rs  discovery.rs  health.rs  lib.rs
dmrlet/crates/dmrlet-runtime/: Cargo.toml
dmrlet/crates/dmrlet-runtime/src/: lib.rs  process.rs  traits.rs
dmrlet/crates/dmrlet-scheduler/: Cargo.toml
dmrlet/crates/dmrlet-scheduler/src/: gpu_allocator.rs  lib.rs  placement.rs  scheduler.rs
dmrlet/crates/dmrlet-store/: Cargo.toml
dmrlet/crates/dmrlet-store/src/: cache.rs  lib.rs  oci.rs
dmrlet/proto/: dmrlet.proto
docs/: K8S_EXAMPLES.md  REMOVE_GO_CONTAINERREGISTRY.md  RESUMABLE_DOWNLOADS.md  k8s-command.md  logging.md
internal/oci/name/: name.go
internal/oci/v1/: types.go
k8s/: README.md  deployment.yaml  kustomization.yaml  rbac.yaml  sa.yaml  service.yaml
k8s/guides/: QUICKSTART.md  README.md
k8s/guides/inference-scheduling/: README.md  helmfile.yaml.gotmpl  httproute.gke.yaml  httproute.yaml
k8s/guides/pd-disaggregation/: README.md  README.xpu.md  helmfile.yaml.gotmpl  httproute.gke.yaml  httproute.yaml
k8s/guides/precise-prefix-cache-aware/: README.md  helmfile.yaml.gotmpl  httproute.gke.yaml  httproute.yaml
k8s/guides/simulated-accelerators/: README.md  helmfile.yaml.gotmpl  httproute.gke.yaml
llamacpp/: Makefile
llamacpp/native/: CMakeLists.txt  README.md  cann.Dockerfile  cuda.Dockerfile  generic.Dockerfile  musa.Dockerfile  rocm.Dockerfile
llamacpp/native/src/server/: CMakeLists.txt  Makefile  server-context.cpp  server-http.cpp  server-http.patch  server-task.cpp
pkg/anthropic/: handler.go  handler_test.go
pkg/distribution/: MODEL_TYPES.md  README.md
pkg/distribution/builder/: builder.go  builder_test.go  from_directory.go  from_directory_test.go
pkg/distribution/distribution/: bundle_test.go  client.go  client_test.go  delete_test.go  ecr_test.go  errors.go  gar_test.go  load_test.go  normalize_test.go  resumable.go  resumable_image.go
pkg/distribution/files/: classify.go  classify_test.go
pkg/distribution/format/: dduf.go  format.go  format_test.go  gguf.go  safetensors.go
pkg/distribution/huggingface/: client.go  client_test.go  downloader.go  model.go  repository.go  repository_gguf_test.go  repository_test.go
pkg/distribution/modelpack/: convert.go  convert_test.go  types.go
pkg/distribution/oci/: config.go  hash.go  image.go  layer.go  manifest.go  partial.go  progress.go  types.go
pkg/distribution/packaging/: directory.go  dirtar_test.go  safetensors.go
pkg/distribution/types/: model.go  (+1 more)
pkg/go-containerregistry/: go.mod  go.sum
pkg/gpuinfo/: memory_windows.go
pkg/inference/: api.go  backend.go  hf_overrides.go  hf_overrides_test.go  runtime_flags.go  runtime_flags_allowlist.go  runtime_flags_allowlist_test.go  runtime_flags_test.go
pkg/logging/: logging.go  logrus_adapter.go  slog.go  slog_test.go
pkg/metrics/: aggregated_handler.go  metrics.go  openai_recorder.go  openai_recorder_test.go  scheduler_proxy.go
pkg/middleware/: alias.go  cors_test.go
pkg/ollama/: api.go  handler.go  http_handler.go  http_handler_test.go
pkg/responses/: api.go  handler.go  handler_test.go  store.go  store_test.go  streaming.go  transform.go  transform_test.go
pkg/sandbox/: sandbox_darwin.go
pkg/swagger/: handler.go  handler_test.go  openapi.yaml
pkg/tailbuffer/: tailbuffer.go
pkg/tls/: certs.go  certs_test.go
python/diffusers_server/: __init__.py  server.py
scripts/: build-vllm-metal-tarball.sh  docker-run.sh  sync-go-version.sh  test-docker-ce-in-container.sh  test-docker-ce-installation.sh
(+201 files in other folders)
