[workspace]
members = [
    "crates/dmrlet-core",
    "crates/dmrlet-runtime",
    "crates/dmrlet-scheduler",
    "crates/dmrlet-network",
    "crates/dmrlet-store",
    "crates/dmrlet-api",
    "crates/dmrlet-daemon",
    "crates/dmrlet-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Docker Inc."]
license = "Apache-2.0"
repository = "https://github.com/ericcurtin/model-runner"
description = "Kubernetes-like orchestrator for Docker Model Runner"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# Web framework
axum = { version = "0.7", features = ["macros"] }
# gRPC
tonic = "0.10"
prost = "0.12"
# CLI
clap = { version = "4.4", features = ["derive"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# GPU detection (NVIDIA)
nvml-wrapper = "0.9"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# HTTP client
reqwest = { version = "0.11", features = ["json"] }
# Async utilities
futures = "0.3"
async-trait = "0.1"
# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }
# Time
chrono = { version = "0.4", features = ["serde"] }
# Config
config = "0.14"
# Hyper for HTTP
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
# Internal crates
dmrlet-core = { path = "crates/dmrlet-core" }
dmrlet-runtime = { path = "crates/dmrlet-runtime" }
dmrlet-scheduler = { path = "crates/dmrlet-scheduler" }
dmrlet-network = { path = "crates/dmrlet-network" }
dmrlet-store = { path = "crates/dmrlet-store" }
dmrlet-api = { path = "crates/dmrlet-api" }
