[package]
name = "dmrlet-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "API server for dmrlet"

[dependencies]
dmrlet-core = { workspace = true }
dmrlet-scheduler = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
hyper = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
