[package]
name = "dmrlet-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and traits for dmrlet"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
