[package]
name = "dmrlet-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "dmrlet daemon binary"

[[bin]]
name = "dmrletd"
path = "src/main.rs"

[dependencies]
dmrlet-core = { workspace = true }
dmrlet-scheduler = { workspace = true }
dmrlet-api = { workspace = true }
dmrlet-network = { workspace = true }
dmrlet-store = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
