[package]
name = "dmrlet-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Networking and load balancing for dmrlet"

[dependencies]
dmrlet-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
