[package]
name = "dmrlet-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GPU-aware scheduler for dmrlet"

[dependencies]
dmrlet-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
