[package]
name = "dmrlet-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Model storage for dmrlet"

[dependencies]
dmrlet-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.10"
